# laba_1.2

./: .gitignore  CMakeLists.txt  ConcreteObservable.cpp  ConcreteObservable.h  File.cpp  File.h  IFile.cpp  IFile.h  IObserver.cpp  IObserver.h  Observable.h  Observer.cpp  Observer.h  ObserverF_1.cpp  ObserverF_1.h  ObserverF_2.cpp  ObserverF_2.h  README.md  main.cpp
src/: File.cpp  File.h  IFile.cpp  IFile.h  Observable.cpp  Observable.h  ObserverMyObject.cpp  ObserverMyObject.h  main.cpp
